--- a/homework/3_2/index.html
+++ b/homework/3_2/index.html
@@ -11,12 +11,6 @@
     <h1>
         Homework 3.2
     </h1>
-    <script>
-      const name = prompt("Введіть ваше імʼя:");
-      const age = prompt("Скільки вам років:");
-      const role = prompt("Якого персонажа обираєте:");
-
-      console.log(`Користувач на імʼя ${name}, якому ${age} років. Хоче грати за персонажа ${role}!`);
-    </script>
+    <script src="./scripts.js"></script>
 </body>
 </html>
